--- a/admin/.env.development
+++ b/admin/.env.development
@@ -6,3 +6,4 @@ SSL_KEY_FILE=$HOME/keys/chrisnasr.local+1-key.pem
 
 REACT_APP_VERSION=$npm_package_version
 REACT_APP_REST_DOMAIN=rest.chrisnasr.local
+REACT_APP_TINYMCE=tt467jkeu2fery8ckufrhkyv35cz66y0w7bok38hvqeruq67
