--- a/admin/.env.production
+++ b/admin/.env.production
@@ -4,3 +4,4 @@ GENERATE_SOURCEMAP=false
 
 REACT_APP_VERSION=$npm_package_version
 REACT_APP_REST_DOMAIN=rest.chrisnasr.com
+REACT_APP_TINYMCE=tt467jkeu2fery8ckufrhkyv35cz66y0w7bok38hvqeruq67
