Development - initial development

--- a/www/public/manifest.json
+++ b/www/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "ChrisNasr",
-  "name": "Chris Nasr",
+  "short_name": "Admin",
+  "name": "Chris Nasr - Admin",
   "icons": [
     {
       "src": "favicon.ico",
