--- a/www/package.json
+++ b/www/package.json
@@ -5,10 +5,12 @@
   "dependencies": {
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
-    "@ouroboros/body": "^1.0.3",
+    "@mui/material": "^5.5.1",
+    "@ouroboros/body": "^1.0.4",
     "@ouroboros/browser": "^0.1.7",
-    "@ouroboros/dates": "^1.0.0",
+    "@ouroboros/clone": "^1.0.1",
     "@ouroboros/events": "^1.0.0",
+    "@ouroboros/tools": "^0.5.3",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
@@ -16,7 +18,6 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.2",
-    "react-snackbar-alert": "^2.1.0",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
