Development - initial development

--- a/rest/requirements.txt
+++ b/rest/requirements.txt
@@ -2,6 +2,7 @@ arrow==1.2.3
 body-oc==2.0.0
 config-oc==1.0.3
 define-oc==1.0.0
+email-smtp==1.0.0
 record-mysql==1.0.0
 record-redis==1.0.0
 tools-oc==1.2.3
